# reality_stone

./: .editorconfig  .gitignore  Cargo.toml  LLM2.py  README.md  RealityStone.py  build.bat  butterfly_comparison.py  butterfly_speedup.py  butterfly_test.py  check_symbols.py  debug.py  fix_include.py  force_cuda_load.py  helgason_accuracy_first.py  hyper_butterfly.md  llm copy.py  llm.py  mnist_comparison.py  mnist_example.py  pyproject.toml  requirements.txt  script.py  setup.py  simple_gpu_demo.py  test.md  test.py  test2.py  test3.py  test4.py  test5.py  test6 copy.py  test6.py  test_all_models.py  test_extension.py  test_gpu.py  test_import.py  test_pure_python.py  trans.py
data/: __init__.py
examples/: 01_basic_compression_test.py  02_core_compression_engine.py  03_progressive_compression_test.py  04_fast_quality_compression.py  05_ultra_fast_compression.py  06_audio_compression_neural.py  07_accuracy_focused_compression.py  07_advanced_compression_with_learning.py  08_final_accuracy_compression.py  08_simple_advanced_compression.py  09_ultimate_compression.py  10_final_ultimate_compression.py  11_semantic_aware_compression.py  12_hyperbolic_semantic_compression.py  DeepLayer.py  HBCNN.py  HBFF.py  Many.py  PoincareBall.py  attention_embedding_compression.py  dev_mode_test.py  helgason_fft_audio_compression.py  helgason_fft_audio_final.py  helgason_fft_audio_stabilized.py  helgason_reality_stone_final.py  helgason_reality_stone_success.py  helgason_reality_stone_working.py  korean_optimized_compression.py  korean_results_summary.py  mnist_test_updated.py
hyper_butterfly/: Cargo.toml  __init__.py  hyper_butterfly_py.py  pyptoject.toml
python/: __init__.py  advanced.py  layers.py  maps.py  models.py  optimizations.py
riemannian_manifold/: __init__.py
riemutils/: __init__.py  hyper_butterfly_py.py
src/: extension.cpp  lib.rs
src/config/: mod.rs  (+1 more)
tests/: Chebyshev.py  Deep.py  FFTCNN.py  FFTRedisual.py  FNM.py  FSB.py  FSB_CIFAR.py  HBCNN.py  HBFF.py  Many.py  gradient_check.py  run_all_tests.py  test_advanced_features.py  test_advanced_fft.py  test_conversions.py  test_debug_mobius.py  test_klein.py  test_lorentz.py  test_mnist_integration.py  test_mobius.py  test_models.py  test_numerical_stability.py  test_poincare.py  test_poincare_ops.py
(+181 files in other folders)
