[package]
name = "hyper_butterfly"
version = "0.1.0"
authors = ["donghwanyeom <donghwanyeom@gmail.com>"]
edition = "2021"
description = "하이퍼볼릭 신경망을 위한 고성능 라이브러리"
license = "MIT"
repository = "https://github.com/jigglypop/hyper_butterfly"

[lib]
name = "hyper_butterfly"
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.15"
num = "0.4"
rayon = { version = "1.7", optional = true }
half = "2.3"
pyo3 = { version = "0.19", features = ["extension-module"], optional = true }
numpy = { version = "0.19", optional = true }
cudarc = { version = "0.9.14", optional = true }
rand = "0.8"                                                                  # 추가

[features]
default = ["python"]
python = ["pyo3", "numpy"]
cuda = ["cudarc"]          # 의존성 이름 변경
parallel = ["rayon"]
